[tool.poetry]
name = "isoladb"
version = "0.1.0"
description = "Ephemeral PostgreSQL instances for unit testing"
readme = "README.md"
license = "MIT"
authors = ["Yegor Stepanov"]
keywords = ["testing", "postgresql", "database", "unit-testing", "ephemeral"]
packages = [{ include = "isoladb", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]

[tool.poetry.dependencies]
python = ">=3.8"
psycopg = {version = ">=3.1", extras = ["binary"]}

[tool.poetry.extras]
pytest = ["pytest"]
sqlalchemy = ["sqlalchemy"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
sqlalchemy = ">=2.0"
ruff = "*"
mypy = "*"

[tool.poetry.plugins.pytest11]
isoladb = "isoladb.pytest_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
strict = true
